--- a/00_Pytorch_fundamentals.ipynb
+++ b/00_Pytorch_fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPAX4ik6zSYSp5GwN2BbkoX",
+      "authorship_tag": "ABX9TyMKi5uXvg5cTQkwqoGGnmKa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -850,6 +850,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Manipulating tensors (tensor operations)\n",
+        "\n",
+        "*   Addition\n",
+        "*   Substraction\n",
+        "*   Multiplication (element-wise)\n",
+        "*   Division\n",
+        "*   Matrix multiplication\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "rfqjgZs2HXCb"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Create a tensor of values and add a number to it\n",
@@ -955,6 +972,199 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The main two rules for matrix multiplication to remember are:\n",
+        "\n",
+        "The inner dimensions must match:\n",
+        "(3, 2) @ (3, 2) won't work\n",
+        "(2, 3) @ (3, 2) will work\n",
+        "(3, 2) @ (2, 3) will work\n",
+        "The resulting matrix has the shape of the outer dimensions:\n",
+        "(2, 3) @ (3, 2) -> (2, 2)\n",
+        "(3, 2) @ (2, 3) -> (3, 3)"
+      ],
+      "metadata": {
+        "id": "h58cgZkkIEJ1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "# Matrix multiplication by hand\n",
+        "# (avoid doing operations with for loops at all cost, they are computationally expensive)\n",
+        "value = 0\n",
+        "for i in range(len(tensor)):\n",
+        "  value += tensor[i] * tensor[i]\n",
+        "value"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HFM89qYuJtSe",
+        "outputId": "27ec225f-1e26-40db-d293-ae32568c0a45"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 1.1 ms, sys: 0 ns, total: 1.1 ms\n",
+            "Wall time: 869 µs\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(194)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "torch.matmul(tensor, tensor)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Fvf970V2JvaD",
+        "outputId": "3bdccad2-273f-454f-92d0-909011a11109"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 330 µs, sys: 0 ns, total: 330 µs\n",
+            "Wall time: 262 µs\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(194)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.rand(3, 2)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RI9nkh5BLrQk",
+        "outputId": "a6e78bf6-3dd3-45c1-f747-281f2fb5ca5a"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.5080, 0.4382],\n",
+              "        [0.8123, 0.9613],\n",
+              "        [0.6085, 0.9845]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.rand(2, 2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SR91ZQi4LuG8",
+        "outputId": "5ea2740c-dc00-4fd8-f6d6-5a61e879bfc0"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.0799, 0.4569],\n",
+              "        [0.9451, 0.5183]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.rand(3, 2) @ torch.rand(2, 2)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2symY90sLzZc",
+        "outputId": "ddcac9ac-e3a3-4b95-8746-5ca807063f6b"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.1236, 0.6079],\n",
+              "        [0.3638, 0.3171],\n",
+              "        [0.5742, 1.2499]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# One of the most common errors in deep learning (shape errors)"
+      ],
+      "metadata": {
+        "id": "qhNoCd3PNdhC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cp135K_BNecf"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
